# settle-oauth-gcp

./: .gitignore  404.html  Accepting_connections_from_Settle.html  Connecting_to_Settle.html  README.md  index.html  mkdocs.yml  pyproject.toml  python_demo.html  reference.html  sitemap.xml
docs/: Accepting_connections_from_Settle.md  Connecting_to_Settle.md  index.md  python_demo.md  reference.md
samples/python/: client_side.py  main.py  server_side.py
search/: search_index.json
